# VINS-Course

./: .gitignore  CMakeLists.txt  run_cmake.sh
test/: run_euroc.cpp
tmp/: CMakeLists.txt
